make modal-overflow-x hidden. Bugfix for bootstrap-grid inside of modal

--- a/style/css/modal.css
+++ b/style/css/modal.css
@@ -69,6 +69,7 @@ button::-moz-focus-inner {
 .modal-content {
     width: 100%;
     background-color: #FFF;
+    overflow-x: hidden;
     overflow-y: auto;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .35);
 }
